# Praediktive-Direkte-Demokratie

./: .gitignore  README.md  notebooks~HEAD  pyproject.toml
Grundlagen/: DATASET XLSX 11-02-2026.xlsx  Swissvotes_Uebersicht.html  Swissvotes_Uebersicht.md  bundesrat_uebereinstimmung.csv  generate_charts.py  themen_querschnitt.csv  themen_querschnitt_html.txt  wortanalyse.csv
data/: DATASET CSV 11-02-2026.csv  praed.csv
data/processed/: swissvotes_processed.csv
notebooks/: Exploration_csc.ipynb  PCA.ipynb  PCA_Index.ipynb  Pitch_20260310.qmd  Pitch_20260317.html  Pitch_20260317.qmd  pitch_vis.ipynb  prädikative_demokratie.ipynb  visualisierung.ipynb  visualisierung_csc.ipynb
notebooks/Old Notebooks/: prädikative_demokratie_safety_file.ipynb  visualisierung_csc.ipynb
notebooks/Pitch_20260317_files/: Pitch_20260317.html
notebooks/Pitch_202603_files/: Pitch_20260310.html  pitch_vis.ipynb
