[project]
name = "praediktive-direkte-demokratie"
version = "0.1.0"
description = "Analyse der Kongruenz zwischen Behördenempfehlungen und Volksentscheiden"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "numpy>=1.24",
    "openpyxl>=3.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
]
